--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,6 +38,27 @@ jobs:
         with:
           # Upload entire repository
           path: '.'
+      - name: Change base href in App.razor to match gh repo name 🏷️
+        run: |
+          cd ${{ env.SRC }}/Presentation
+          REPO_NAME=$(echo "${{ github.repository }}" | awk -F '/' '{print $NF}')
+          sed -i 's/<base href="\/"[[:blank:]]*\/>/<base href="\/'$REPO_NAME'\/" \/>/g' ./wwwroot/index.html
+
+      - name: Test 🧪
+        run: dotnet test --verbosity normal
+
+      - name: Publish 📦
+        run: dotnet publish ${{ env.SRC }}/Presentation --configuration Release --output dist
+
+      # https://github.blog/2009-12-29-bypassing-jekyll-on-github-pages/
+      # Folders starting with _ are handled as jekyll. This file will prevent that.
+      # Because blazor framework uses _framework folder, we need to prevent jekyll from processing it.
+      - name: Create .nojekyll file 📁
+        run: touch dist/wwwroot/.nojekyll
+
+      - name: Copy index.html to 404.html 📄
+        run: |
+          cp dist/wwwroot/index.html dist/wwwroot/404.html
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.7.3
         with:
