--- a/.github/workflows/static2.yml
+++ b/.github/workflows/static2.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+        contents: write
     steps:
       # Checkout the code
       - uses: actions/checkout@v4
