--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .vs/
+/WebsiteBlazor/.vs/WebsiteBlazor/v17/.suo
+/WebsiteBlazor/.vs/WebsiteBlazor/v17/DocumentLayout.backup.json
+/WebsiteBlazor/.vs/WebsiteBlazor/v17/DocumentLayout.json
