--- a/.github/workflows/static2.yml
+++ b/.github/workflows/static2.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Publish the site
       - name: Publish
-        run: dotnet publish WebsiteBlazor/WebsiteBlazor.sln -c Release -o publish -p:StaticWebAssetBasePath=WebsiteBlazor -p:BaseHref=/WebsiteBlazor/
+        run: dotnet publish WebsiteBlazor/WebsiteBlazor.sln -c Release -o publish -p:BaseHref=/WebsiteBlazor/
 
       # Deploy the site
       - name: Deploy
