--- a/.github/workflows/static2.yml
+++ b/.github/workflows/static2.yml
@@ -6,7 +6,7 @@ name: github pages
 on:
   push:
     branches:
-      - main
+      - source
 
 jobs:
   deploy:
@@ -35,4 +35,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: publish/wwwroot
+          publish_branch: main
           force_orphan: true
