--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /WebsiteBlazor/.vs/WebsiteBlazor/v17/.suo
 /WebsiteBlazor/.vs/WebsiteBlazor/v17/DocumentLayout.backup.json
 /WebsiteBlazor/.vs/WebsiteBlazor/v17/DocumentLayout.json
+/WebsiteBlazor/obj/Release/net8.0/compressed
