more color schemes

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.vs/
+/WebsiteBlazor/.vs/
 /WebsiteBlazor/.vs/WebsiteBlazor/v17/.suo
 /WebsiteBlazor/.vs/WebsiteBlazor/v17/DocumentLayout.backup.json
 /WebsiteBlazor/.vs/WebsiteBlazor/v17/DocumentLayout.json
 /WebsiteBlazor/obj/Release/net8.0/compressed
+/WebsiteBlazor/obj
